# pyproject.toml
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-cli"
version = "0.1.0"
description = "Notion client in terminal"
readme = "README.md"
authors = [{ name = "Eggkiller1101", email = "akikodesu222@gmail.com"}]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["notion", "cli", "terminal", "tui", "note"]

dependencies = [
	"textual>=0.45.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "sqlite-utils>=3.36",
    "aiosqlite>=0.20.0",
]