# pyproject.toml
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-cli"
version = "0.1.0"
description = "Notion client in terminal"
readme = "README.md"
authors = [{ name = "Eggkiller1101", email = "akikodesu222@gmail.com"}]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["notion", "cli", "terminal", "tui", "note"]

dependencies = [
    "textual>=0.45.0",          # TUI框架，用于构建终端用户界面
    "typer[all]>=0.9.0",        # 命令行解析工具，用于处理CLI命令
    "rich>=13.0.0",             # 终端富文本输出，用于美化输出格式
    "sqlite-utils>=3.36",       # SQLite数据库工具，用于简化数据库操作
    "aiosqlite>=0.20.0",        # 异步SQLite支持，用于TUI模式下的数据库操作
    "markdown-it-py>=2.2.0",    # Markdown解析和渲染，用于处理笔记内容
    "pygments>=2.15.0",         # 语法高亮支持，用于代码块显示
    "python-magic>=0.4.27",     # 文件类型检测，用于处理各种文件附件
    "python-dotenv>=1.0.0",     # 环境变量管理，用于处理配置信息
    "keyring>=24.2.0",          # 系统密钥环集成，用于安全存储凭证
    "cryptography>=41.0.0",     # 数据加密功能，用于数据安全保护
    "gitpython>=3.1.32",        # Git集成，用于笔记版本控制
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",            # 测试框架，用于编写和运行测试
    "pytest-asyncio>=0.21.0",   # 异步测试支持，用于测试异步代码
]

dev = [
    "black>=23.0.0",            # 代码格式化工具，用于保持代码风格一致
    "isort>=5.12.0",            # 导入排序工具，用于整理导入语句
    "mypy>=1.3.0",              # 类型检查工具，用于静态类型检查
]

build = [
    "PyInstaller>=5.13.0",      # 打包工具，用于生成单文件可执行程序
]